[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/DialogEditor/icons/Edit.svg" type="Texture" id=1]
[ext_resource path="res://addons/DialogEditor/icons/Save.svg" type="Texture" id=2]
[ext_resource path="res://addons/DialogEditor/icons/Play.svg" type="Texture" id=3]
[ext_resource path="res://addons/DialogEditor/icons/Remove.svg" type="Texture" id=4]
[ext_resource path="res://addons/DialogEditor/DialogManager/Dialog.gd" type="Script" id=5]
[ext_resource path="res://addons/DialogEditor/icons/Bake.svg" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Dialog" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 0.04
rect_min_size = Vector2( 200, 24 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Selected" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 24.0

[node name="ID" type="Label" parent="."]
margin_left = 28.0
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "0"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 40.0
margin_right = 44.0
margin_bottom = 24.0

[node name="Name" type="Label" parent="."]
margin_left = 48.0
margin_top = 5.0
margin_right = 48.0
margin_bottom = 19.0

[node name="EditName" type="Button" parent="."]
margin_left = 52.0
margin_right = 76.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 1 )

[node name="Tags" type="MenuButton" parent="."]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 24.0
text = "Tags"
align = 0
switch_on_hover = true

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 124.0
margin_right = 128.0
margin_bottom = 24.0

[node name="Description" type="LineEdit" parent="."]
margin_left = 132.0
margin_right = 904.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Description"

[node name="VSeparator3" type="VSeparator" parent="."]
margin_left = 908.0
margin_right = 912.0
margin_bottom = 24.0

[node name="Save" type="Button" parent="."]
margin_left = 916.0
margin_right = 940.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 2 )

[node name="Open" type="Button" parent="."]
margin_left = 944.0
margin_right = 968.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "Open Graph"
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 3 )

[node name="Bake" type="Button" parent="."]
margin_left = 972.0
margin_right = 996.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "Bake Dialog"
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 6 )

[node name="Delete" type="Button" parent="."]
margin_left = 1000.0
margin_right = 1024.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 4 )

[node name="DeleteDialog" type="ConfirmationDialog" parent="."]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 75.0
window_title = "Delete Dialog"
resizable = true
dialog_text = "Do you want to Delete this Dialog?"
dialog_autowrap = true

[node name="RenameDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "new name"
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="RenameDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 34.0

[node name="LineEdit" type="LineEdit" parent="RenameDialog/VBoxContainer"]
margin_right = 58.0
margin_bottom = 24.0
placeholder_text = "new Name"
